Revert "OSC Beta v0.5.2 For Backup"
This reverts commit 61c5b1a9fed48f99820c0628c4a056b8e74d3078.